# cs336_language_model

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
assignments/2/: CHANGELOG.md  README.md
cs336-native/: Cargo.toml
cs336-native/src/: lib.rs  merge.rs
cs336_basics/: pyproject.toml
cs336_basics/cs336_basics/: merge.py  train_bpe.py
cs336_basics/tests/: adapters.py
docs/: contributing.md  index.md  reference.md
docs/assignments/: learnings_basics.md
docs/assignments/cs336_basics/: learnings.md
docs/development/: reference.md
docs/guides/: docker.md
scripts/a1/: adamw_accounting.py  tokenize_dataset.py  train_experiments.py  train_lm.py
scripts/a1/conf/optimizer/: adamw.yaml  owt.yaml  tinystories.yaml
scripts/a1/conf/task/: tokenize.yaml
scripts/a1/conf/trainer/: tinystories.yaml
scripts/a2/: benchmark.py
scripts/a2/conf/: config.yaml
scripts/a2/conf/model/: 2_7B.yaml  large.yaml  medium.yaml  small.yaml
src/: pyproject.toml
src/cs336/: adapters.py  checkpoint.py  data.py  file_chunks.py  merge.py  pretokenization.py  tokenization.py  tokenizer.py  train_bpe.py  transformer.py
src/cs336/data/: __init__.py
src/cs336/layer/: __init__.py  attention.py  block.py  embedding.py  feedforward.py  linear.py  transformer.py
src/cs336/loss/: __init__.py  cross_entropy.py
src/cs336/merge/: __init__.py  merge_py.py
src/cs336/optim/: adamw.py  muon.py  sgd.py
src/cs336/scripts/: decode.py  download_dataset.py  sgd.py  tinystories_experiments.py  tokenize_dataset.py  tokenizer_experiments.py  train_bpe.py  train_experiments.py  train_lm.py
src/cs336/scripts/conf/: config.yaml  experiments.yaml
src/cs336/scripts/conf/data/: owt.yaml  tinystories.yaml
src/cs336/scripts/conf/experiment/: owt.yaml
src/cs336/scripts/conf/model/: owt.yaml  tinystories.yaml  transformer.yaml
src/cs336/scripts/conf/optimizer/: adamw.yaml  muon.yaml  owt.yaml  tinystories.yaml
src/cs336/scripts/conf/profiler/: default.yaml
src/cs336/scripts/conf/task/: train_bpe.yaml  train_lm.yaml  train_owt.yaml  train_stories.yaml
src/cs336/scripts/conf/trainer/: default.yaml  owt.yaml  tinystories.yaml
src/cs336_basics/: __init__.py  adapters.py  checkpoint.py  config.py  factory.py  file_chunks.py  pretokenization.py  tokenizer.py  transformer.py
src/cs336_basics/layer/: attention.py  embedding.py  feedforward.py  normalization.py  transformer.py
src/cs336_basics/merge/: __init__.py
src/cs336_basics/optim/: __init__.py  clip.py  scheduler.py
src/cs336_basics/scripts/: decode.py  download_dataset.py  flops_accounting.py  sgd.py  tokenizer_experiments.py  train_bpe.py  train_experiments.py  train_lm.py
src/cs336_basics/scripts/conf/: experiments.yaml
src/cs336_basics/scripts/conf/data/: owt.yaml
src/cs336_basics/scripts/conf/experiment/: tinystories.yaml
src/cs336_basics/scripts/conf/model/: owt.yaml  tinystories.yaml
src/lms/: cli.py
src/tests/: adapters.py
tests/: adapters.py  conftest.py  test_cli.py  test_core.py  test_data.py  test_model.py  test_nn_utils.py  test_optimizer.py  test_qk_norm.py  test_serialization.py  test_tokenizer.py  test_train_bpe.py  test_transformer.py
tests/additional/: test_cross_entropy_benchmark.py  test_feedforward.py  test_merge.py  test_muon.py  test_optimizer_groups.py  test_pretokenization.py  test_tokenizer.py  test_transformer_config.py
tests/assignment1/: common.py  test_data.py  test_model.py  test_nn_utils.py  test_optimizer.py  test_qk_norm.py  test_serialization.py  test_tokenizer.py  test_train_bpe.py  test_transformer.py
tests/assignment1/additional/: conftest.py  test_optimizer_groups.py  test_pretokenization.py  test_tokenizer.py  test_transformer_config.py
tests/assignment2/: adapters.py  common.py  conftest.py  test_attention.py  test_ddp.py  test_ddp_individual_parameters.py  test_sharded_optimizer.py
tests/not_implemented/: test_data.py  test_nn_utils.py  test_tokenizer.py
