
[project]
name = "cs336_language_model"
version = "0.1.0"
description = "Learning about language modeling from scratch"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Noé Fontana", email = "noe.fontana.pro@gmail.com" }]
keywords = [
    "deep learning",
    "natural language processing",
    "machine learning",
    "transformer",
    "language modeling",
    "python",
    "modern",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[dependency-groups]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
    "ruff>=0.14.2",
]

[project.urls]
Homepage = "https://github.com/NoeFontana/cs336_language_model"
Repository = "https://github.com/NoeFontana/cs336_language_model.git"
Documentation = "https://NoeFontana.github.io/cs336_language_model/"


# Ruff configuration
[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11+.
target-version = "py311"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused-function-argument
    "SIM101", # duplicate-isinstance-call
    "SIM102", # collapsible-if
    "SIM103", # return-in-try-except-finally
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
