[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "cs336"
version = "0.1.0"
description = "Learning about language modeling from scratch"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "LICENSES/*"]
requires-python = ">=3.11"
authors = [{ name = "Noé Fontana", email = "noe.fontana.pro@gmail.com" }]
keywords = [
    "deep learning",
    "natural language processing",
    "machine learning",
    "transformer",
    "language modeling",
    "python",
    "modern",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "einops>=0.8.1",                                                           # tensor operations
    "einx>=0.3.0",                                                             # more general tensor operations
    "jaxtyping>=0.3.0",                                                        # type hints for pytorch/jax/numpy
    "numpy",
    "psutil>=6.1.1",
    "pytest>=8.3.4",
    "regex>=2024.11.6",                                                        # more powerful regex than the builtin `re` module
    "submitit>=1.5.2",                                                         # job submission for SLURM
    "tiktoken>=0.9.0",
    "torch~=2.6.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torch~=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'", # Intel Macs
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
    "ty>=0.0.1a16",
]


[tool.maturin]
python-source = "src"
manifest-path = "cs336-native/Cargo.toml"
module-name = "cs336_native"
bindings = "pyo3"

[tool.uv]
python-preference = "managed"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest-benchmark>=5.2.0",
    "ruff>=0.14.3",
    "scalene>=1.5.55",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
    "ruff>=0.14.2",
]

[project.urls]
Homepage = "https://github.com/NoeFontana/cs336_language_model"
Repository = "https://github.com/NoeFontana/cs336_language_model.git"
Documentation = "https://NoeFontana.github.io/cs336_language_model/"


# Ruff configuration
[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.11+.
target-version = "py311"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused-function-argument
    "SIM101", # duplicate-isinstance-call
    "SIM102", # collapsible-if
    "SIM103", # return-in-try-except-finally
    "UP",
]
ignore = ["F722"]


[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402", "F401", "F403", "E501"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
markers = ["slow: marks tests as slow to be excluded by default."]
addopts = ["-m", "not slow", "-s"]
pythonpath = ["src"]
